--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,6 +43,12 @@ services:
       retries: 3
       start_period: 30s
 
+  # Mail Server
+  mailhog:
+    image: mailhog/mailhog
+    ports:
+      - "8025:8025"
+
 volumes:
   identity-access-mysql-volume:
     driver: 'local'
