--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,8 @@
+# App
 LOG_LEVEL=DEBUG
 OPENAPI_PREFIX=
 DI_PROFILE_ACTIVES=InMem
+FRONTEND_URL=http://localhost:3000
 # Database
 # (mysql|postgresql)://{username}:{password}@{hostname}:{port}/{database}?{options}
 DATABASE_URL=mysql://user:pass@identity-access-mysql:3306/identity-access?charset=utf8mb4
