--- a/infrastructure/mysql/conf.d/my.cnf
+++ b/infrastructure/mysql/conf.d/my.cnf
@@ -5,6 +5,7 @@ collation-server=utf8_general_ci
 init-connect='SET NAMES utf8'
 init_connect='SET collation_connection = utf8_general_ci'
 skip-character-set-client-handshake
+default_authentication_plugin=caching_sha2_password
 
 [client]
 default-character-set=utf8
