--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -2,6 +2,8 @@ fastapi==0.110.0
 uvicorn[standard]==0.29.0
 python-multipart==0.0.9
 
+requests==2.31.0
+
 # Auth
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
